# purepythonmilter

./: .dockerignore  .envrc  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  run-all-linters
docs/: api.md  design.md  milter-protocol.md  releasing.md  smtp-recap.md
postfixtest/: Dockerfile  Makefile
postfixtest/files/: apt-install-clean.sh  entrypoint.sh
src/purepythonmilter/: __init__.py  _version.py
src/purepythonmilter/api/: application.py  interfaces.py  logger.py  models.py
src/purepythonmilter/examples/: README.md
src/purepythonmilter/examples/append_header_ip/: __main__.py
src/purepythonmilter/examples/change_body/: __main__.py
src/purepythonmilter/examples/debug_log_all/: __main__.py
src/purepythonmilter/protocol/: commands.py  definitions.py  exceptions.py  packet.py  payload.py  responses.py
src/purepythonmilter/server/: connectionhandler.py  milterserver.py  session.py
tests/: conftest.py
tests/api/: test_application.py  test_logger.py  test_models.py
tests/integration/: conftest.py  test_server.py
tests/integration/examples/: test_append_header_ip.py  test_change_body.py  test_debug_log_all.py
tests/protocol/: test_commands.py  test_packet.py  test_payload.py  test_responses.py
tests/server/: test_session.py
