# SPDX-FileCopyrightText: 2023 Gert van Dijk <github@gertvandijk.nl>
#
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = [
    "setuptools>=61.0.0",  # For reading all configuration from pyproject.toml
    "setuptools-scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "purepythonmilter"
authors = [
    { name = "Gert van Dijk", email = "github@gertvandijk.nl" },
]
description = "A Milter library and app framework in pure-Python with asyncio"
license = { text = "Apache License 2.0" }
dynamic = ["version", "readme"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Filters",
    "Topic :: Communications :: Email :: Mail Transport Agents",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "attrs",
]

[project.optional-dependencies]
development = [
    "black",
    "build",
    "flake8",
    "isort",
    "mypy",
    "pytest-asyncio",
    "pytest-cov",
    "pytest",
    "pyupgrade",
    "reuse",
    "ruff>=0.0.245",
    "setuptools-scm[toml]>=6.2",
    "twine",
    "validate-pyproject[all]",
]
examples = [
    "click",
]

[project.urls]
homepage = "https://github.com/gertvdijk/purepythonmilter"
repository = "https://github.com/gertvdijk/purepythonmilter.git"

[tool.setuptools]
license-files = ["LICENSES/*.txt"]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools_scm]
version_scheme = "guess-next-dev"

[tool.black]
# This option takes *multiple* Python versions and should include all supported Python
# versions, but this may change in the future. https://github.com/psf/black/issues/751
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
add_imports = [
    # PEP-563 (new semantics for annotations) is gated behind
    # 'from __future__ import annotations', including Python 3.10 & 3.11.
    # https://docs.python.org/3/library/__future__.html#id1
    "from __future__ import annotations",
]

[tool.mypy]
strict = true
namespace_packages = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[tool.pytest.ini_options]
# Already move to future-default asyncio strict mode.
# https://github.com/pytest-dev/pytest-asyncio#modes
asyncio_mode = "strict"
addopts = [
    "--capture=no",  # Do not capture stdout, may hide output in some cases
    "--durations=5",  # Get attention to slow tests
    "--cov=purepythonmilter",
    "--cov-report=term-missing",
    "--cov-report=xml:.pytest-cov/coverage.xml",
    "--cov-report=html:.pytest-cov/html/",
]
log_level = "DEBUG"
